overflow issue articles img

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -506,6 +506,8 @@ li.active a.page-link::before {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    max-width: 100%;
+    padding-top: 1em;
 }
 
 .article-date {
